Use LWJGL 3.3.1